<resources>
    <!-- Numbers -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="app_name">ApplicationCalculator</string>
    <!-- Operators -->
    <string name="add">+</string>
    <string name="subtract">-</string> <!-- Corrected minus sign -->
    <string name="multiply">×</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="decimal">.</string>
    <string name="factorial">!</string>

    <!-- Special Buttons -->
    <string name="clear">C</string>
    <string name="delete">DEL</string>
    <string name="percentage">%</string>
    <string name="square_root">√</string>
    <string name="power">^</string>
    <string name="parenthesis_open">(</string>
    <string name="parenthesis_close">)</string>

    <!-- Messages -->
    <string name="error">Error</string>
    <string name="result">Result</string>

    <!-- Functions -->
    <string name="sin">sin</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="cos">cos</string> <!-- Renamed to maintain consistency -->
    <string name="deg">deg</string>
    <string name="rad">rad</string>
    <string name="euler">e</string>
    <string name="INV">INV</string>
</resources>
