<!-- res/layout/activity_main.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">


    <TextView
        android:id="@+id/display"
        android:layout_width="368dp"
        android:layout_height="193dp"

        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <Button
        android:id="@+id/delete"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:textSize="20sp"
        android:background="@drawable/round_button"
        android:includeFontPadding="false"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:tint="@color/darkgrey"
        app:backgroundTint="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/percentage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toTopOf="@+id/clear" />


    <Button
        android:id="@+id/percentage"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#d3d3d3"
        android:includeFontPadding="false"
        android:text="@string/percentage"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:backgroundTint="@color/orange"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delete"
        app:layout_constraintTop_toTopOf="@+id/delete" />

    <Button
        android:id="@+id/divide"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:background="@drawable/round_button"
        android:textSize="30sp"
        android:backgroundTint="#d3d3d3"
        android:includeFontPadding="false"
        android:text="@string/divide"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/percentage"
        app:layout_constraintTop_toTopOf="@+id/percentage" />

    <Button
        android:id="@+id/eight"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:textSize="30sp"
        android:background="@drawable/round_button"
        android:includeFontPadding="false"
        android:text="@string/eight"
        android:textColor="@color/white"
        app:backgroundTint="@color/darkgrey"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toTopOf="@+id/seven" />

    <!-- Nine Button -->
    <Button
        android:id="@+id/nine"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:textSize="30sp"
        android:background="@drawable/round_button"
        android:includeFontPadding="false"
        android:text="@string/nine"
        android:textColor="@color/white"
        app:backgroundTint="@color/darkgrey"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toTopOf="@+id/eight" />

    <!-- Multiply Button -->
    <Button
        android:id="@+id/multiply"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:textSize="30sp"
        android:background="@drawable/round_button"
        android:backgroundTint="#d3d3d3"
        android:includeFontPadding="false"
        android:text="@string/multiply"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toTopOf="@+id/nine" />

    <Button
        android:id="@+id/five"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:textSize="30sp"
        android:background="@drawable/round_button"
        android:backgroundTint="#d3d3d3"
        android:includeFontPadding="false"
        android:text="@string/five"
        android:textColor="@color/white"
        app:backgroundTint="@color/darkgrey"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toTopOf="@+id/four" />

    <!-- Six Button -->
    <Button
        android:id="@+id/six"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"

        android:textSize="30sp"
        android:background="@drawable/round_button"
        android:backgroundTint="#d3d3d3"
        android:includeFontPadding="false"
        android:text="@string/six"
        android:textColor="@color/white"
        app:backgroundTint="@color/darkgrey"
        app:layout_constraintEnd_toStartOf="@+id/substract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toTopOf="@+id/five" />

    <!-- Subtract Button -->
    <Button
        android:id="@+id/substract"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:background="@drawable/round_button"

        android:textSize="30sp"
        android:includeFontPadding="false"
        android:text="@string/subtract"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toTopOf="@+id/six" />


    <Button
        android:id="@+id/one"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:textSize="30sp"
        android:background="@drawable/round_button"
        android:includeFontPadding="false"
        android:text="@string/one"
        android:textColor="@color/white"
        app:backgroundTint="@color/darkgrey"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintStart_toStartOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/zero"
        android:layout_width="180dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:textSize="30sp"
        android:includeFontPadding="false"
        android:text="@string/zero"
        android:textColor="@color/white"

        app:backgroundTint="@color/darkgrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/four"
        android:layout_width="86dp"
        android:textSize="30sp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#d3d3d3"
        android:includeFontPadding="false"
        android:text="@string/four"
        android:textColor="@color/white"
        app:backgroundTint="@color/darkgrey"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintStart_toStartOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/seven"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="5dp"
        android:textSize="30sp"
        android:background="@drawable/round_button"
        android:backgroundTint="#d3d3d3"
        android:includeFontPadding="false"
        android:text="@string/seven"
        android:textColor="@color/white"
        app:backgroundTint="@color/darkgrey"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintStart_toStartOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <!-- Three Button -->

    <!-- Add Button -->

    <Button
        android:id="@+id/clear"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/round_button"
        android:textSize="30sp"
        android:includeFontPadding="false"
        android:text="@string/clear"
        android:textColor="@color/white"
        app:backgroundTint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/two"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:textSize="30sp"
        android:background="@drawable/round_button"
        android:backgroundTint="#d3d3d3"
        android:includeFontPadding="false"
        android:text="@string/two"
        android:textColor="@color/white"
        app:backgroundTint="@color/darkgrey"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toTopOf="@+id/one" />

    <Button
        android:id="@+id/add"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:textSize="30sp"
        android:layout_margin="2dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#d3d3d3"
        android:includeFontPadding="false"
        android:text="@string/add"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toTopOf="@+id/three" />

    <Button
        android:id="@+id/three"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:textSize="30sp"
        android:background="@drawable/round_button"
        android:backgroundTint="#d3d3d3"
        android:includeFontPadding="false"
        android:text="@string/three"
        android:textColor="@color/white"
        app:backgroundTint="@color/darkgrey"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toTopOf="@+id/two" />


    <Button
        android:id="@+id/decimal"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:background="@drawable/round_button"
        android:includeFontPadding="false"
        android:text="@string/decimal"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:backgroundTint="@color/darkgrey"

        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toTopOf="@+id/zero" />

    <Button
        android:id="@+id/equal"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="2dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#d3d3d3"
        android:includeFontPadding="false"
        android:text="@string/equal"
        android:textSize="30sp"


        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/decimal"
        app:layout_constraintTop_toTopOf="@+id/decimal" />
</androidx.constraintlayout.widget.ConstraintLayout>